--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <option value="Music/Eyes.mp3">Eyes</option>
         <option value="Music/Sóng.mp3">Sóng vỗ vỡ bờ</option>
         <option value="Music/MCK.mp3">Anh vẫn ok</option>
+        <option value="Music/BTM.mp3">Bầu trời mới</option>
+        <option value="Music/DWAL.mp3">Die with a smile (Icy)</option>
         <!-- Add more songs here -->
     </select>
     <button id="playBtn" disabled>Play Music</button>
